k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: novoceo
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
